Se terminar el desafío 2

--- a/assets/html/desafio2.html
+++ b/assets/html/desafio2.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <a href="../../index.html" style="display: flex; flex-direction: column; justify-content:end ; align-items: center; margin: 30px;">home</a>
+    <link rel="stylesheet" href="../css/desafio2.css" />
+  </head>
+  <body>
+    <div
+      class="img"
+    >
+      <div class="card">
+        <img src="../imgs/jjk-sticker.jpeg" alt="" />
+        <input id="input1" type="number" placeholder="Cantidad" />
+      </div>
+
+      <div class="card">
+        <img src="../imgs/mushishi-sticker.jpeg" alt="" />
+        <input id="input2" type="number" placeholder="Cantidad" />
+      </div>
+
+      <div class="card">
+        <img src="../imgs/vagabond-sticker.jpeg" alt="" />
+        <input id="input3" type="number" placeholder="Cantidad" />
+      </div>
+    </div>
+    <div class="click">
+        <p id="alerta"></p>
+    <button id="boton">Verificar</button>
+    </div>
+    
+    <a
+      href="../../index.html"
+      style="
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
+        align-items: center;
+        margin: 30px;
+      "
+      >home</a
+    >
     <script src="../js/desafio2.js"></script>
-</body>
+  </body>
 </html>
