Se completa el HTML el CSS y el JS de page desafio3

--- a/assets/html/desafio3.html
+++ b/assets/html/desafio3.html
@@ -4,8 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/desafio3.css">
 </head>
 <body>
+    <h1>Ingresa el password</h1>
+    <div class="digitos">
+        <select name="" id="digito1">
+            <option value="1" >1</option>
+            <option value="2" >2</option>
+            <option value="3" >3</option>
+            <option value="4" >4</option>
+            <option value="5" >5</option>
+            <option value="6" >6</option>
+            <option value="7" >7</option>
+            <option value="8" >8</option>
+            <option value="9" >9</option>
+            <option value="0">0</option>
+        </select>
+        <select name="" id="digito2">
+            <option value="1" >1</option>
+            <option value="2" >2</option>
+            <option value="3" >3</option>
+            <option value="4" >4</option>
+            <option value="5" >5</option>
+            <option value="6" >6</option>
+            <option value="7" >7</option>
+            <option value="8" >8</option>
+            <option value="9" >9</option>
+            <option value="0">0</option>
+        </select>
+        <select name="" id="digito3">
+            <option value="1" >1</option>
+            <option value="2" >2</option>
+            <option value="3" >3</option>
+            <option value="4" >4</option>
+            <option value="5" >5</option>
+            <option value="6" >6</option>
+            <option value="7" >7</option>
+            <option value="8" >8</option>
+            <option value="9" >9</option>
+            <option value="0">0</option>
+        </select>
+    </div>
+    <p id="mensaje"></p>
+    <button id="boton">Ingresar</button>
     <a href="../../index.html" style="display: flex; flex-direction: column; justify-content:end ; align-items: center; margin: 30px;">home</a>
     <script src="../js/desafio3.js"></script>
 </body>
